--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "expo": "~53.0.22",
+    "expo-av": "^15.1.7",
+    "expo-router": "~5.1.5",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.6",
-    "expo-router": "~5.1.5",
-    "@expo/vector-icons": "^14.1.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1"
   },
